
    HADOOP-12653. Use SO_REUSEADDR to avoid getting "Address already in use"
    when using kerberos and attempting to bind to any port on the local IP
    address (cmccabe)

    HADOOP-12683. Add number of samples in last interval in snapshot of 
    MutableStat. (Vikram Srivastava via kasha)

    HADOOP-8887. Use a Maven plugin to build the native code using CMake
    (cmccabe)

  BUG FIXES

    HADOOP-12655. TestHttpServer.testBindAddress bind port range is wider
    than expected. (Wei-Chiu Chuang via stevel)

    HADOOP-12613. TestFind.processArguments occasionally fails.
   (Wei-Chiu Chuang via stevel)

   HADOOP-12597. In kms-site.xml configuration
   "hadoop.security.keystore.JavaKeyStoreProvider.password"
   should be updated with new name. (Surendra Singh Lilhore via stevel)

   HADOOP-12573. TestRPC.testClientBackOff failing.
   (Xiao Chen via stevel)

   HDFS-9517. Fix missing @Test annotation on
   TestDistCpUtils.testUnpackAttributes (Wei-Chiu Chuang via cmccabe)

Release 2.8.0 - UNRELEASED

  INCOMPATIBLE CHANGES

    HADOOP-11746. rewrite test-patch.sh (aw)

    HADOOP-12416. Trash messages should be handled by Logger instead of being
    delivered on System.out. (Mingliang Liu via aajisaka)

  NEW FEATURES

    HADOOP-11226. Add a configuration to set ipc.Client's traffic class with
    IPTOS_LOWDELAY|IPTOS_RELIABILITY. (Gopal V via ozawa)

    HADOOP-9477. Add posixGroups support for LDAP groups mapping service.
    (Dapeng Sun via Yongjun Zhang)

    HADOOP-11843. Make setting up the build environment easier.
    (Niels Basjes via cnauroth)

    HADOOP-11949. Add user-provided plugins to test-patch (Sean Busbey via aw)

    HADOOP-8934. Shell command ls should include sort options (Jonathan Allen
    via aw)

    HADOOP-10971. Add -C flag to make `hadoop fs -ls` print filenames only.
    (Kengo Seki via aajisaka)

    HADOOP-5732. Add SFTP FileSystem. (Ramtin Boustani and Inigo Goiri via
    cdouglas)
